src/objects/Decoder_Overrides__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <description>Sometimes unwanted characters (e.g., *) still remain after email decoding. Use this setting to specify these unwanted characters so E2S will strip them from the decoded email.</description>
    <fields>
        <fullName>Corresponding_E2S_Rule__c</fullName>
        <description>Corresponding E2S rule for this decoder override</description>
        <inlineHelpText>Enter the name of the corresponding E2S rule for this decoder override</inlineHelpText>
        <label>Corresponding E2S Rule</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Substitute_Character__c</fullName>
        <description>The character that should be used to substitute stripped character(s) from a decoded email</description>
        <inlineHelpText>[Optional] Specify the character(s) that should replace the stripped character(s) from a decoded email; if left blank the stripped character(s) will only be removed.</inlineHelpText>
        <label>Substitute Character</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unwanted_Character__c</fullName>
        <description>The character that should be stripped from a decoded email</description>
        <inlineHelpText>Specify the character (e.g., *) that should be stripped from a decoded email</inlineHelpText>
        <label>Unwanted Character(s)</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>E2S - Decoder Overrides</label>
</CustomObject>